# PySolarMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: initial_plan.md
examples/: nip_baseline.json
scripts/: setup_scaps_wine.py  smoke_scaps_runner.py
src/solarcell_sim/: __init__.py  api.py  config.py  diagnostics.py  errors.py  schema.py  storage.py  validators.py
src/solarcell_sim/backends/: __init__.py  base.py  registry.py
src/solarcell_sim/backends/scaps/: __init__.py  backend.py  parser.py  renderer.py
src/solarcell_sim/runners/: __init__.py  base.py  windows_native.py  wine.py
src/solarcell_sim_mcp/: server.py
src/solarcell_sim_mcp/tools/: __init__.py  core.py
tests/: conftest.py  test_backend_prepare_parser.py  test_mcp_tools.py  test_schema_config.py
tests/fixtures/scaps_sample_outputs/: pyscaps.out
